@@ -1,6 +1,13 @@
 Version Changes for Hypermail
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ Peter McCluskey (Mar 14, 2003)
+   Fixed two bugs with deleting messages with the incremental mode. One bug
+  meant that the message body was only rewritten or removed with the
+  delete_msgnum option, not delete_older / delete_newer. The other bug
+  involved only updating the is_deleted flag in the gdbm file if the
+  message body was redone to update a MSG_IN_REPLY_TO line.
+
  Kent Landfield (Mar 9, 2003)
    - updated domains.h to accurately reflect the current set of root domains.
 
